--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@
                         <div class="div-menu">
                             <header class="cd-header">
                                 <div id="cd-logo">
-                                    <a href="index.html"><img src="assets/images/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="assets/images/logo.png" alt="Logo"/></a><br/>They ride, you ride, <div class="brand">iRide</div>
                                 </div>
-                                <a class="cd-menu-trigger" href="#main-nav"><span></span></a>
+                                
                             </header>
                         </div>
-
-
                         <div class="home-wrapper">
                             <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                                 <div class="home-content">
@@ -130,9 +128,8 @@
         <section id="features" class="sections lightbg">
 
             <div class="heading-content text-center">
-                <h3>My Working Process</h1>
-                    <p>Hi, i’m Paul Lapkin, Experience Crafter from Canada.</p>
-            </div>
+                <h3>Nos valeurs</h1>
+			</div>
 
             <div class="container text-center">
                 <!-- Example row of columns -->
@@ -143,7 +140,7 @@
                             <div class="features-bg design">
 
                                 <div class="features-item">
-                                    <i class="lnr lnr-screen"></i>
+                                    <i class="lnr lnr-pencil"></i>
                                     <h6><a href="#">Design</a></h6>
                                 </div>
 
@@ -155,7 +152,7 @@
 
                                 <div class="features-item">
                                     <i class="lnr lnr-magic-wand"></i>
-                                    <h6><a href="#">development</a></h6>
+                                    <h6><a href="#">Modernité</a></h6>
                                 </div>
 
                             </div>
@@ -165,8 +162,8 @@
                             <div class="features-bg testing">
 
                                 <div class="features-item">
-                                    <i class="lnr lnr-dinner"></i>
-                                    <h6><a href="#">Testing</a></h6>
+                                    <i class="lnr lnr-leaf"></i>
+                                    <h6><a href="#">Ecologie</a></h6>
                                 </div>
 
                             </div>
@@ -176,8 +173,8 @@
                             <div class="features-bg launch">
 
                                 <div class="features-item">
-                                    <i class="lnr lnr-rocket"></i>
-                                    <h6><a href="#">Launch</a></h6>
+                                    <i class="lnr lnr-sun"></i>
+                                    <h6><a href="#">Confort</a></h6>
                                 </div>
 
                             </div>
