--- a/index.html
+++ b/index.html
@@ -56,15 +56,10 @@
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Nos vélos<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Urbain: iPia</a></li>
+            <li><a href="#">VTT: iSmoo</a></li>
           </ul>
         </li>
       </ul>
@@ -73,7 +68,8 @@
 </nav>
         <!--Home page style-->
         <header id="home" class="home home-main-content">
-            <div class="overlay sections">
+		<div id="background_image">
+            <div class="overlay sections" id="product_iPia">
                 <div class="container text-center">
                     <div class="row">
                         <div class="div-menu">
@@ -95,6 +91,7 @@
                     </div>
                 </div>
             </div>
+			</div>
         </header>
 
         <!-- Sections -->
